Fixed not showing ss number after signing the log and also added style for flash notice

--- a/public/stylesheets/activlog.css
+++ b/public/stylesheets/activlog.css
@@ -12,6 +12,19 @@ ul, ol {
 	padding-left:1.5em;
 }
 
+.notice {
+	background-color:rgba(0,255,0,0.5);
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	left:35%;
+	padding:1em 0;
+	position:absolute;
+	text-align:center;
+	top:50%;
+	width:400px;
+}
+
 #edit_profile ol,
 #login ol,
 #register ol {
